# qpick

./: README.md  pyproject.toml
qpick/: config.py  manage.py
qpick/qpick/: asgi.py  settings.py  urls.py  wsgi.py
qpick/shop/: models.py  urls.py
qpick/shop/static/css/: style.css
qpick/shop/templates/: index.html
